--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12">
-                <h1>Test site, wow!</h1>
+                <h1>Test site!</h1>
             </div>
         </div>
         <div class="row">
